--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ theme_mode: light # [light | dark]
 cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "https://github.com/user-attachments/assets/6a157806-ed25-4648-ba76-ed9932b550f5"
+avatar: "https://github.com/user-attachments/assets/1ad48ad1-9259-43f3-8fb0-c821deebbe25"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -223,3 +223,10 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
